fix: #34 outline visibility with complementary colour

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -24,8 +24,17 @@ body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   margin: 0;
 }
-/* Max width for paragraph */
 
+*:focus,
+*:focus-visible {
+  /* border: 5px solid var(--geel); */
+  /* box-shadow: 0 0 0.2em 0.2em var(--black); */
+  outline: 0.3em solid #2154ff;
+  outline-offset: 0.2em;
+  transition: 200ms;
+}
+
+/* Max width for paragraph */
 p {
   max-width: 65ch;
 }
